--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,28 +13,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-05 Sun 17:22]
+#+CAPTION: Clock summary at [2017-02-05 Sun 18:03]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *49:19* |       |       | 100.0 |
+| *Total time*                                                                | *49:59* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 49:19   |       |       | 100.0 |
-| Active                                                                      |         | 49:19 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:13 |   2.5 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   1.5 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |   8.4 |
+| Stories                                                                     | 49:59   |       |       | 100.0 |
+| Active                                                                      |         | 49:59 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:13 |   2.4 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   1.4 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |   8.3 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.4 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  11.0 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  10.9 |
 | COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   2.5 |
 | COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   2.7 |
-| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  21.4 |
+| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  21.1 |
 | POSTPONED Partial matching of built-ins doesn't work for certain types      |         |       |  0:50 |   1.7 |
 | COMPLETED Try to improve compilation times                                  |         |       |  1:39 |   3.3 |
-| COMPLETED Add support for primitives across the pipeline                    |         |       | 19:48 |  40.1 |
-| COMPLETED Drop "inclusion" prefix in quilt.cpp                              |         |       |  0:40 |   1.4 |
+| COMPLETED Add support for primitives across the pipeline                    |         |       | 19:48 |  39.6 |
+| COMPLETED Drop "inclusion" prefix in quilt.cpp                              |         |       |  0:40 |   1.3 |
 | COMPLETED Mark elements that are valid enumeration underlying elements      |         |       |  0:19 |   0.6 |
-| STARTED Refactor yarn model validators                                      |         |       |  1:10 |   2.4 |
+| COMPLETED Refactor yarn model validators                                    |         |       |  1:10 |   2.3 |
+| COMPLETED Split indices out of the intermediate model                       |         |       |  0:40 |   1.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -540,7 +541,8 @@ The following are the valid types for primitives:
 
 Read to =can_be_primitive_underlier=.
 
-*** STARTED Refactor yarn model validators                            :story:
+*** COMPLETED Refactor yarn model validators                          :story:
+    CLOSED: [2017-02-05 Sun 17:31]
     CLOCK: [2017-02-05 Sun 17:06]--[2017-02-05 Sun 17:22] =>  0:16
     CLOCK: [2017-02-05 Sun 16:45]--[2017-02-05 Sun 17:05] =>  0:20
     CLOCK: [2017-02-05 Sun 16:10]--[2017-02-05 Sun 16:44] =>  0:34
@@ -571,6 +573,18 @@ Tasks:
 - move =abstract_elements= to indices
 - decomposer now operates on intermediate models
 - rename validators
+
+*** COMPLETED Split indices out of the intermediate model             :story:
+    CLOSED: [2017-02-05 Sun 18:03]
+    CLOCK: [2017-02-05 Sun 17:56]--[2017-02-05 Sun 18:03] =>  0:07
+    CLOCK: [2017-02-05 Sun 17:22]--[2017-02-05 Sun 17:55] =>  0:33
+
+For some reason, we decided to include the indices directly into the
+intermediate model. Whilst this made life easier at the time, it
+doesn't make a lot of sense. We should split it out and supply the
+indices as arguments where they are used. It will make the
+intermediate model smaller and will also make it clear where we need
+the indices.
 
 *** Add validation rules for primitives and enumerations              :story:
 
