--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,31 +13,32 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-05 Sun 22:42]
+#+CAPTION: Clock summary at [2017-02-06 Mon 21:21]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *50:49* |       |       | 100.0 |
+| *Total time*                                                                | *51:24* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 50:49   |       |       | 100.0 |
-| Active                                                                      |         | 50:49 |       | 100.0 |
+| Stories                                                                     | 51:24   |       |       | 100.0 |
+| Active                                                                      |         | 51:24 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:13 |   2.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   1.4 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |   8.2 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |   8.1 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.4 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  10.7 |
-| COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   2.5 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  10.6 |
+| COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   2.4 |
 | COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   2.6 |
-| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  20.8 |
+| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  20.6 |
 | POSTPONED Partial matching of built-ins doesn't work for certain types      |         |       |  0:50 |   1.6 |
 | COMPLETED Try to improve compilation times                                  |         |       |  1:39 |   3.2 |
-| COMPLETED Add support for primitives across the pipeline                    |         |       | 19:48 |  39.0 |
+| COMPLETED Add support for primitives across the pipeline                    |         |       | 19:48 |  38.5 |
 | COMPLETED Drop "inclusion" prefix in quilt.cpp                              |         |       |  0:40 |   1.3 |
 | COMPLETED Mark elements that are valid enumeration underlying elements      |         |       |  0:19 |   0.6 |
 | COMPLETED Refactor yarn model validators                                    |         |       |  1:10 |   2.3 |
 | COMPLETED Split indices out of the intermediate model                       |         |       |  0:40 |   1.3 |
 | COMPLETED Add validation rules for primitives and enumerations              |         |       |  0:34 |   1.1 |
 | COMPLETED Add validation for C# keywords                                    |         |       |  0:16 |   0.5 |
+| STARTED Map upsilon primitives to intrinsics                                |         |       |  0:35 |   1.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -608,6 +609,31 @@ we're not doing the same for C#.
 We should also ensure models in LAM are checked for both C# and C++
 keywords - or actually always check all keywords for all languages.
 
+*** STARTED Map upsilon primitives to intrinsics                      :story:
+    CLOCK: [2017-02-06 Mon 20:45]--[2017-02-06 Mon 21:20] =>  0:35
+
+Upsilon allows users to create "strong typedefs" around primitve
+types. We need to unpack these into their intrinsic counterparts and
+them map the intrinsics to native types.
+
+Slight mistake: we mapped the primitive types themselves but in
+reality what needs to be mapped are the fields making references to
+the primitive types. We should just filter out all primitives.
+
+Additional wrinkle: what the end users want is to unpack "real
+primitives" into intrinsics, but "other" primitives should be mapped
+to objects. This can be achieved by hard-coding =Plaform= primitives
+into the mapping layer. However, some non-platform primitives may also
+be candidates too. We need to create a list of these to see how
+widespread the problem is.
+
+Another alternative is to apply hard-coded regexes:
+
+- if the name matches any of the intrinsic names
+
+Finally, the last option may be to have yet another mapping data file
+format that lists the primitives to unbox.
+
 *** Immutable types cannot be owned by mutable types                  :story:
 
 When we try to create a mutable class that has a property of an
@@ -751,30 +777,6 @@ Links:
 
 - [[http://stackoverflow.com/questions/741054/mapping-between-stl-c-and-c-sharp-containers][Mapping between stl C++ and C# containers]]
 - [[http://stackoverflow.com/questions/3659044/comparison-of-c-stl-collections-and-c-sharp-collections][Comparison of C++ STL collections and C# collections?]]
-
-*** Map upsilon primitives to intrinsics                              :story:
-
-Upsilon allows users to create "strong typedefs" around primitve
-types. We need to unpack these into their intrinsic counterparts and
-them map the intrinsics to native types.
-
-Slight mistake: we mapped the primitive types themselves but in
-reality what needs to be mapped are the fields making references to
-the primitive types. We should just filter out all primitives.
-
-Additional wrinkle: what the end users want is to unpack "real
-primitives" into intrinsics, but "other" primitives should be mapped
-to objects. This can be achieved by hard-coding =Plaform= primitives
-into the mapping layer. However, some non-platform primitives may also
-be candidates too. We need to create a list of these to see how
-widespread the problem is.
-
-Another alternative is to apply hard-coded regexes:
-
-- if the name matches any of the intrinsic names
-
-Finally, the last option may be to have yet another mapping data file
-format that lists the primitives to unbox.
 
 *** Tidy-up "is floating point"                                       :story:
 
