--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,32 +13,16 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-06 Mon 21:21]
-| <75>                                                                        |         |       |       |       |
-| Headline                                                                    | Time    |       |       |     % |
-|-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *51:24* |       |       | 100.0 |
-|-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 51:24   |       |       | 100.0 |
-| Active                                                                      |         | 51:24 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:13 |   2.4 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   1.4 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |   8.1 |
-| COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.4 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  10.6 |
-| COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   2.4 |
-| COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   2.6 |
-| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  20.6 |
-| POSTPONED Partial matching of built-ins doesn't work for certain types      |         |       |  0:50 |   1.6 |
-| COMPLETED Try to improve compilation times                                  |         |       |  1:39 |   3.2 |
-| COMPLETED Add support for primitives across the pipeline                    |         |       | 19:48 |  38.5 |
-| COMPLETED Drop "inclusion" prefix in quilt.cpp                              |         |       |  0:40 |   1.3 |
-| COMPLETED Mark elements that are valid enumeration underlying elements      |         |       |  0:19 |   0.6 |
-| COMPLETED Refactor yarn model validators                                    |         |       |  1:10 |   2.3 |
-| COMPLETED Split indices out of the intermediate model                       |         |       |  0:40 |   1.3 |
-| COMPLETED Add validation rules for primitives and enumerations              |         |       |  0:34 |   1.1 |
-| COMPLETED Add validation for C# keywords                                    |         |       |  0:16 |   0.5 |
-| STARTED Map upsilon primitives to intrinsics                                |         |       |  0:35 |   1.1 |
+#+CAPTION: Clock summary at [2017-02-13 Mon 12:36]
+| <75>                                                                        |        |      |      |       |
+| Headline                                                                    | Time   |      |      |     % |
+|-----------------------------------------------------------------------------+--------+------+------+-------|
+| *Total time*                                                                | *0:39* |      |      | 100.0 |
+|-----------------------------------------------------------------------------+--------+------+------+-------|
+| Stories                                                                     | 0:39   |      |      | 100.0 |
+| Active                                                                      |        | 0:39 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:09 |  23.1 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:30 |  76.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -47,7 +31,9 @@
 
 Updates to sprint and product backlog.
 
-*** STARTED Edit release notes for previous sprint                    :story:
+*** COMPLETED Edit release notes for previous sprint                  :story:
+    CLOSED: [2017-02-13 Mon 12:35]
+    CLOCK: [2017-02-13 Mon 12:18]--[2017-02-13 Mon 12:35] =>  0:17
     CLOCK: [2017-02-13 Mon 12:04]--[2017-02-13 Mon 12:17] =>  0:13
 
 Add github release notes for previous sprint.
@@ -66,15 +52,15 @@ User visible changes
 ===============
 In this sprint, a small number of user visible changes were made:
 
-- **Enumerations are more configurable**: Its now possible to disable the ```invalid``` enumeration and add user defined enumeration values. This is useful for defining bitflags for example.
-- **Introduction of Primitives**: A new meta-model concept was introduced called a ```primitive```. This allows users to "redefine" built-in types or other select types such as ```std::string``` for their own purposes. As an example you can define a ```product_id``` as a primitive with an underlying type of ```std::string```. This makes the models more intuitive and the generated code more readable.
+- **Enumerations are more configurable**: Its now possible to disable the ```invalid``` enumeration and add user defined enumeration values. This is useful for defining bitflags for example. See the ```enumeration``` test model for examples ([Dia](https://raw.githubusercontent.com/DomainDrivenConsulting/dogen/master/test_data/yarn.dia/input/enumeration.dia), [JSON](https://raw.githubusercontent.com/DomainDrivenConsulting/dogen/master/test_data/yarn.json/input/enumeration.json)).
+- **Introduction of Primitives**: A new meta-model concept was introduced called a ```primitive```. This allows users to "redefine" built-in types or other select types such as ```std::string``` for their own purposes. As an example you can define a ```product_id``` as a primitive with an underlying type of ```std::string```. This makes the models more intuitive and the generated code more readable. See the ```primitive``` test model for examples ([Dia](https://raw.githubusercontent.com/DomainDrivenConsulting/dogen/master/test_data/yarn.dia/input/primitive.dia), [JSON](https://raw.githubusercontent.com/DomainDrivenConsulting/dogen/master/test_data/yarn.json/input/primitive.json)).
 - **Improvements in Validation**: assorted updates to validation, including checking that the enumeration underlying type is valid as an enumeration type, checking for C# keywords, etc.
 
 For more details of the work carried out this sprint, see the [sprint log](https://github.com/DomainDrivenConsulting/dogen/blob/master/doc/agile/sprint_backlog_97.org).
 
 Next Sprint
 ========
-The next sprint will continue to focus on Upsilon and C#.
+The next sprint will continue to focus on Upsilon and hopefully C#.
 
 Binaries
 ======
