--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-07 Tue 21:36]
+#+CAPTION: Clock summary at [2017-03-08 Wed 10:09]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:59* |       |      | 100.0 |
+| *Total time*                                                                | *13:26* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:59   |       |      | 100.0 |
-| Active                                                                      |         | 12:59 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   6.3 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   3.3 |
-| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  22.8 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  39.0 |
+| Stories                                                                     | 13:26   |       |      | 100.0 |
+| Active                                                                      |         | 13:26 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   6.1 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   3.2 |
+| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  22.1 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  37.7 |
 | STARTED Check for incompatibility between input language and enabled kernels |         |       | 0:11 |   1.4 |
-| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |  13.9 |
+| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |  13.4 |
 | STARTED Build on tags for Windows                                           |         |       | 0:15 |   1.9 |
 | STARTED Add a "flat directory" mode                                         |         |       | 0:08 |   1.0 |
-| STARTED Split include and source directories                                |         |       | 0:31 |   4.0 |
-| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 0:49 |   6.3 |
+| STARTED Split include and source directories                                |         |       | 0:58 |   7.2 |
+| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 0:49 |   6.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -170,19 +170,6 @@ At present we have basic support for LAM. We should create a simple
 test model that uses a few of the mapped types just to make sure it
 vaguely works and does not
 
-*** Not setting output language results in weird errors               :story:
-
-When setting the input language to language agnostic and not setting
-the output languages, we get the following error:
-
-: /dogen/projects/yarn/src/types/legacy_name_tree_parser.cpp(123): Throw in function std::__cxx11::string {anonymous}::grammar<Iterator>::scope_operator_for_language(dogen::yarn::languages) [with Iterator = __gnu_cxx::__normal_iterator<const char*, std::__cxx11::basic_string<char> >; std::__cxx11::string = std::__cxx11::basic_string<char>]
-: Dynamic exception type: boost::exception_detail::clone_impl<dogen::yarn::parsing_error>
-: std::exception::what: Invalid or unsupported language: { "__type__": "languages", "value": "language_agnostic" }
-: [tag_workflow*] = Code generation failure.
-: [owner*] = <dogen><test_models><all_path_and_directory_settings><package_0><package_0_1><class_2>
-: unknown location(0): fatal error: in "workflow_tests/all_path_and_directory_settings_generates_expected_code_dia": std::runtime_error: Error during test
-: /home/marco/Development/DomainDrivenConsulting/dogen/projects/knit/tests/workflow_tests.cpp(213): last checkpoint
-
 *** STARTED Build on tags for Windows                                 :story:
     CLOCK: [2017-03-06 Mon 12:01]--[2017-03-06 Mon 12:16] =>  0:15
 
@@ -215,6 +202,7 @@ different top-level directories), which is nice.
 We should check that =enable_unique_file_names= is set to true.
 
 *** STARTED Split include and source directories                      :story:
+    CLOCK: [2017-03-08 Wed 09:42]--[2017-03-08 Wed 10:09] =>  0:27
     CLOCK: [2017-03-06 Mon 16:30]--[2017-03-06 Mon 17:01] =>  0:31
 
 We removed a feature due to lack of use cases: splitting source and
@@ -273,6 +261,46 @@ For now we removed the project and solution postfixes:
 
 : #DOGEN quilt.csharp.visual_studio.solution.postfix=_vs15_
 : #DOGEN quilt.csharp.visual_studio.project.postfix=_vc15_
+
+*** Add C++-03 mode                                                    :epic:
+
+#+begin_quote
+*Story*: As a dogen user, I want to create models in C++ 03 so that I
+can interface with legacy code.
+#+end_quote
+
+It shouldn't be too hard to generate C++-03 code in addition to
+C++-14. We could follow the gcc/odb convention and have a =-std=
+option for this in meta-data. The only problem would be testing - at
+present the language settings comes from cmake, and we'd have to make
+sure the compiler is not in C++-14 mode when compiling test models
+in 03. Also, the mixing and matching of 03 with 14 may not be
+trivial. We should wait for a use case.
+
+It may be possible to add different flags to different projects in
+CMake.
+
+We should call this the c++ dialect.
+
+Tasks:
+
+- default ctors, final, noexcept. Need to manually add default
+  ctor (e.g. force it).
+- enums
+- need to disable ODB c++ 11 as well.
+
+*** Not setting output language results in weird errors               :story:
+
+When setting the input language to language agnostic and not setting
+the output languages, we get the following error:
+
+: /dogen/projects/yarn/src/types/legacy_name_tree_parser.cpp(123): Throw in function std::__cxx11::string {anonymous}::grammar<Iterator>::scope_operator_for_language(dogen::yarn::languages) [with Iterator = __gnu_cxx::__normal_iterator<const char*, std::__cxx11::basic_string<char> >; std::__cxx11::string = std::__cxx11::basic_string<char>]
+: Dynamic exception type: boost::exception_detail::clone_impl<dogen::yarn::parsing_error>
+: std::exception::what: Invalid or unsupported language: { "__type__": "languages", "value": "language_agnostic" }
+: [tag_workflow*] = Code generation failure.
+: [owner*] = <dogen><test_models><all_path_and_directory_settings><package_0><package_0_1><class_2>
+: unknown location(0): fatal error: in "workflow_tests/all_path_and_directory_settings_generates_expected_code_dia": std::runtime_error: Error during test
+: /home/marco/Development/DomainDrivenConsulting/dogen/projects/knit/tests/workflow_tests.cpp(213): last checkpoint
 
 *** Using underscores with C# results in invalid code                 :story:
 
@@ -431,33 +459,6 @@ building for Visual Studio. We should have a top-level knob that
 enables or disables all of these features in one go:
 
 - =quilt.cpp.visual_studio.enabled=
-
-*** Add C++-03 mode                                                    :epic:
-
-#+begin_quote
-*Story*: As a dogen user, I want to create models in C++ 03 so that I
-can interface with legacy code.
-#+end_quote
-
-It shouldn't be too hard to generate C++-03 code in addition to
-C++-14. We could follow the gcc/odb convention and have a =-std=
-option for this in meta-data. The only problem would be testing - at
-present the language settings comes from cmake, and we'd have to make
-sure the compiler is not in C++-14 mode when compiling test models
-in 03. Also, the mixing and matching of 03 with 14 may not be
-trivial. We should wait for a use case.
-
-It may be possible to add different flags to different projects in
-CMake.
-
-We should call this the c++ dialect.
-
-Tasks:
-
-- default ctors, final, noexcept. Need to manually add default
-  ctor (e.g. force it).
-- enums
-- need to disable ODB c++ 11 as well.
 
 *** Handcrafted support for fabric types                              :story:
 
