--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-08 Wed 12:33]
+#+CAPTION: Clock summary at [2017-03-08 Wed 14:24]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *14:42* |       |      | 100.0 |
+| *Total time*                                                                | *15:30* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 14:42   |       |      | 100.0 |
-| Active                                                                      |         | 14:42 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   5.6 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   2.9 |
-| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  20.2 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  34.5 |
+| Stories                                                                     | 15:30   |       |      | 100.0 |
+| Active                                                                      |         | 15:30 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   5.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   2.8 |
+| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  19.1 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  32.7 |
 | STARTED Check for incompatibility between input language and enabled kernels |         |       | 0:11 |   1.2 |
-| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |  12.2 |
-| STARTED Build on tags for Windows                                           |         |       | 0:15 |   1.7 |
+| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |  11.6 |
+| STARTED Build on tags for Windows                                           |         |       | 0:15 |   1.6 |
 | STARTED Add a "flat directory" mode                                         |         |       | 0:08 |   0.9 |
-| STARTED Split include and source directories                                |         |       | 2:14 |  15.2 |
-| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 0:49 |   5.6 |
+| STARTED Split include and source directories                                |         |       | 3:02 |  19.6 |
+| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 0:49 |   5.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -202,6 +202,8 @@ different top-level directories), which is nice.
 We should check that =enable_unique_file_names= is set to true.
 
 *** STARTED Split include and source directories                      :story:
+    CLOCK: [2017-03-08 Wed 13:56]--[2017-03-08 Wed 14:24] =>  0:28
+    CLOCK: [2017-03-08 Wed 13:35]--[2017-03-08 Wed 13:55] =>  0:20
     CLOCK: [2017-03-08 Wed 11:39]--[2017-03-08 Wed 12:33] =>  0:54
     CLOCK: [2017-03-08 Wed 11:16]--[2017-03-08 Wed 11:38] =>  0:22
     CLOCK: [2017-03-08 Wed 09:42]--[2017-03-08 Wed 10:09] =>  0:27
